chore: add Dockerfile, prod config, and externalize secrets